feat (return sentiment comment)
